--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,8 +21,11 @@ spring:
   
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: ${REDIS_DATASOURCE_HOST}
+      port: ${REDIS_DATASOURCE_PORT:6380}
+      password: ${REDIS_DATASOURCE_PASSWORD}
+      ssl: true            
+      timeout: 3s
 
 server:
   port: 8080
