[REFACTOR]: redis ssl 설정 삭제

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
       host: ${REDIS_DATASOURCE_HOST}
       port: ${REDIS_DATASOURCE_PORT:6380}
       password: ${REDIS_DATASOURCE_PASSWORD}
-      ssl: true            
+      # ssl: true            
       timeout: 3s
 
 server:
