--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,12 +18,12 @@ spring:
     enabled: false
     baseline-on-migrate: true
     locations: classpath:db/migration
-  
-  redis:
-    host: ${REDIS_DATASOURCE_HOST}
-    port: ${REDIS_DATASOURCE_PORT:6380}
-    password: ${REDIS_DATASOURCE_PASSWORD}
-    ssl: true
+  data:
+    redis:
+      host: ${REDIS_DATASOURCE_HOST}
+      port: ${REDIS_DATASOURCE_PORT:6380}
+      password: ${REDIS_DATASOURCE_PASSWORD}
+      ssl: true
 
 server:
   port: 8080
