--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,10 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
   
-  flyway:
-    enabled: false
-    baseline-on-migrate: true
-    locations: classpath:db/migration
+#  flyway:
+#    enabled: false
+#    baseline-on-migrate: true
+#    locations: classpath:db/migration
   data:
     redis:
       host: ${REDIS_DATASOURCE_HOST}
@@ -28,6 +28,23 @@ spring:
 
 server:
   port: 8080
+
+# Swagger Configuration
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: method
+    doc-expansion: none
+    display-request-duration: true
+    filter: true
+    try-it-out-enabled: true
+  api-docs:
+    path: /api-docs
+    enabled: true
+  default-produces-media-type: application/json
+  default-consumes-media-type: application/json
+  paths-to-match: /api/**
 
 logging:
   level:
